--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ p {
 	width: fit-content;
 	font-size: 4rem;
 	position: relative;
-	color: transparent;
+	color: white;
 	animation: text_reveal 0.5s ease forwards;
 	animation-delay: 1s;
 }
@@ -248,7 +248,7 @@ p {
 	left: 0;
 	height: 100%;
 	width: 0;
-	background-color: white;
+	background-color:lightseagreen;
 	animation: text_reveal_box 1s ease;
 	animation-delay: 0.5s;
 }
