--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ p {
 	background-color:lightseagreen;
 	animation: text_reveal_box 1s ease;
 	animation-delay: 0.5s;
+	color: blue;
 }
 #hero h1:nth-child(1) span {
 	animation-delay: 0.5s;
